--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  reporting: ministryofjustice/hmpps-reporting@v1.0.26
+  reporting: ministryofjustice/hmpps-reporting@dev:7f4b20e0b8dfa77d23fd7aaed5ca335f449919d5
   slack: circleci/slack@4.12.5
 
 parameters:
