Add Requires to Live Job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ workflows:
               only: /.*/
             tags:
               ignore: /.*/
+          requires: [pause_workflow]    
           context:
             - hmpps-reporting-common
             - hmpps-reporting-orb
