--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  reporting: ministryofjustice/hmpps-reporting@v1.0.27
+  reporting: ministryofjustice/hmpps-reporting@1.0.27
   slack: circleci/slack@4.12.5
 
 parameters:
