Update ORB version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,13 @@
 version: 2.1
 
 orbs:
-  reporting: ministryofjustice/hmpps-reporting@1.0.28
+  reporting: ministryofjustice/hmpps-reporting@dev:5a87bdb48cf4bdf90b54266f2b5b9130e56a6f89
   slack: circleci/slack@4.12.5
 
 parameters:
   function:
     type: string
     default: "dpr-transfer-component-function"
-  alerts_channel:
-    type: string
-    default: "dpr_cicd_alerts"
-  approval_channel:
-    type: string
-    default: "dpr_cicd_approvals"
-  release_ready:
-    type: boolean
-    default: true
-    description: When true, Releases artifacts to Live
   notify_slack:
     type: boolean
     default: true
@@ -32,8 +22,8 @@ parameters:
     description: Deploy to Test Environment
   preprod_ready:
     type: boolean
-    default: true
-    description: Deploy to PreProd Environment
+    default: false
+    description: Deploy to PreProd Environment, OBSOLETE
 
 workflows:
   checkout-build-publish:
@@ -50,42 +40,6 @@ workflows:
               only: /.*/
             tags:
               ignore: /.*/
-          context:
-            - hmpps-reporting-common
-            - hmpps-reporting-orb
-      - slack/on-hold:
-          channel: << pipeline.parameters.approval_channel >>
-          filters:
-            branches:
-              only: main
-            tags:
-              ignore: /.*/
-          requires: [reporting/aws_invoke_lambda]
-          context:
-            - hmpps-reporting-common
-      - pause_workflow:
-          channel: << pipeline.parameters.approval_channel >>
-          type: approval
-          filters:
-            branches:
-              only: main
-            tags:
-              ignore: /.*/
-          requires: [slack/on-hold]
-          context:
-            - hmpps-reporting-common
-      - reporting/invoke_lambda_live:
-          function: << pipeline.parameters.function >>
-          ref: << pipeline.git.branch >><< pipeline.git.tag >>
-          release_ready: << pipeline.parameters.release_ready >>
-          notify_slack: << pipeline.parameters.notify_slack >>
-          channel: dpr_release_alerts       
-          filters:
-            branches:
-              only: /.*/
-            tags:
-              ignore: /.*/
-          requires: [pause_workflow]    
           context:
             - hmpps-reporting-common
             - hmpps-reporting-orb
