--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  reporting: ministryofjustice/hmpps-reporting@dev:685515d
+  reporting: ministryofjustice/hmpps-reporting@dev:1.0.49
   slack: circleci/slack@4.12.5
 
 parameters:
