--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  reporting: ministryofjustice/hmpps-reporting@1.0.50
+  reporting: ministryofjustice/hmpps-reporting@dev:c50e65e2abc670d35b0f8f395f622373f6d81966
   slack: circleci/slack@4.12.5
 
 parameters:
@@ -20,41 +20,17 @@ parameters:
     type: boolean
     default: true
     description: Deploy to Test Environment
-  preprod_ready:
-    type: boolean
-    default: false
-    description: Deploy to PreProd Environment, OBSOLETE
 
 workflows:
   checkout-build-publish:
-    jobs:               
+    jobs:
       - reporting/aws_invoke_lambda:
-          name: "Redshift Migrations"
+          name: "Flyway Lambda Migrations"
           function: << pipeline.parameters.function >>
-          migrationDataStore: "redshift"
+          flyway_components: "redshift, operationaldatastore"
           is_mock: false
           test_ready: << pipeline.parameters.test_ready >>
-          preprod_ready: << pipeline.parameters.preprod_ready >>
           flywayArgs: ', "outOfOrder": true'
-          skip_flyway_validate: true
-          ref: << pipeline.git.branch >><< pipeline.git.tag >>
-          notify_slack: << pipeline.parameters.notify_slack >>
-          filters:
-            branches:
-              only: /.*/
-            tags:
-              ignore: /.*/
-          context:
-            - hmpps-reporting-common
-            - hmpps-reporting-orb
-
-      - reporting/aws_invoke_lambda:
-          name: "Operational DataStore Migrations"
-          function: dpr-transfer-component-operational-datastore-function
-          migrationDataStore: "operationaldatastore"
-          is_mock: false
-          test_ready: << pipeline.parameters.test_ready >>
-          preprod_ready: << pipeline.parameters.preprod_ready >>
           skip_flyway_validate: true
           ref: << pipeline.git.branch >><< pipeline.git.tag >>
           notify_slack: << pipeline.parameters.notify_slack >>
