upgrade ORB Version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  reporting: ministryofjustice/hmpps-reporting@dev:c50e65e2abc670d35b0f8f395f622373f6d81966
+  reporting: ministryofjustice/hmpps-reporting@1.0.51
   slack: circleci/slack@4.12.5
 
 parameters:
